Docker image is now even smaller
We're using jdeps and jlink to create a minimal JRE
specifically tailored to our application